--- a/index2.html
+++ b/index2.html
@@ -2,17 +2,55 @@
 <head>
     <title>Google Homepage adaptation</title>
     <style>
+        .header{
+            display: grid;
+            grid-template-columns: 1fr 1fr;
 
+        }
+        .header-right{
+            justify-self: end;
+        }
+        #header-left a{
+            display: inline-block;
+            padding-left: 15px;
+            color: #000;
+            opacity: 0.75;
+            text-decoration: none;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 13px;
+        }
+        #header-right a{
+            display: inline-block;
+            padding-left: 15px;
+            color: #000;
+            opacity: 0.75;
+            text-decoration: none;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 13px;
+        }
     </style>
 </head>
 <body>
     <div class="header">
-
+        <div class="header-left">
+            <div id="header-left">
+                <a href="https://about.google/?fg=1&utm_source=google-DE&utm_medium=referral&utm_campaign=hp-header">Über Google</a>
+                <a href="https://store.google.com/DE?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=de-DE">Store</a>
+            </div>
+        </div>
+        <div class="header-right">
+            <div id="header-right">
+                <a href="https://about.google/?fg=1&utm_source=google-DE&utm_medium=referral&utm_campaign=hp-header">Über Google</a>
+                <a href="https://store.google.com/DE?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=de-DE">Store</a>
+                <a href="https://about.google/?fg=1&utm_source=google-DE&utm_medium=referral&utm_campaign=hp-header">Über Google</a>
+                <a href="https://store.google.com/DE?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=de-DE">Store</a>
+            </div>
+        </div>
     </div>
     <div class="main">
 
     </div>
     <div class="footer">
-        
+
     </div>
 </body>
