--- a/index2.html
+++ b/index2.html
@@ -28,6 +28,16 @@
             font-family: Arial, Helvetica, sans-serif;
             font-size: 13px;
         }
+        #anmelden {
+            display: inline-block;
+            line-height: 28px;
+            padding: 0 12px;
+            border-radius: 2px;
+            border: 1px solid #4285f4;
+            font-weight: bold;
+            outline: none;
+            background: -webkit-linear-gradient(top,#4387fd,#4683ea);
+        }
     </style>
 </head>
 <body>
@@ -40,10 +50,11 @@
         </div>
         <div class="header-right">
             <div id="header-right">
-                <a href="https://about.google/?fg=1&utm_source=google-DE&utm_medium=referral&utm_campaign=hp-header">Über Google</a>
-                <a href="https://store.google.com/DE?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=de-DE">Store</a>
-                <a href="https://about.google/?fg=1&utm_source=google-DE&utm_medium=referral&utm_campaign=hp-header">Über Google</a>
-                <a href="https://store.google.com/DE?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=de-DE">Store</a>
+                <a href="https://mail.google.com/mail/?tab=wm&ogbl">Gmail</a>
+                <a href="https://www.google.de/imghp?hl=de&tab=wi&ogbl">Bilder</a>
+                <a href="https://www.google.de/intl/de/about/products?tab=wh">Grid</a>
+                <a href="https://accounts.google.com/ServiceLogin?hl=de&passive=true&continue=https://www.google.de/&ec=GAZAAQ" id="anmelden" style="color: white;">Anmelden</a>
+ 
             </div>
         </div>
     </div>
