--- a/index2.html
+++ b/index2.html
@@ -5,6 +5,7 @@
         .header{
             display: grid;
             grid-template-columns: 1fr 1fr;
+            padding: 12px;
 
         }
         .header-right{
@@ -23,15 +24,19 @@
             display: inline-block;
             padding-left: 15px;
             color: #000;
-            opacity: 0.75;
+            opacity: 1;
             text-decoration: none;
             font-family: Arial, Helvetica, sans-serif;
             font-size: 13px;
+        }
+        .image{
+            width: 23px;
         }
         #anmelden {
             display: inline-block;
             line-height: 28px;
             padding: 0 12px;
+            margin-left: 17px;
             border-radius: 2px;
             border: 1px solid #4285f4;
             font-weight: bold;
@@ -52,14 +57,14 @@
             <div id="header-right">
                 <a href="https://mail.google.com/mail/?tab=wm&ogbl">Gmail</a>
                 <a href="https://www.google.de/imghp?hl=de&tab=wi&ogbl">Bilder</a>
-                <a href="https://www.google.de/intl/de/about/products?tab=wh">Grid</a>
+                <a href="https://www.google.de/intl/de/about/products?tab=wh"><img class="image" src="https://icon-library.com/images/google-menu-icon/google-menu-icon-9.jpg" alt="grid"></a>
                 <a href="https://accounts.google.com/ServiceLogin?hl=de&passive=true&continue=https://www.google.de/&ec=GAZAAQ" id="anmelden" style="color: white;">Anmelden</a>
  
             </div>
         </div>
     </div>
     <div class="main">
-
+        
     </div>
     <div class="footer">
 
