--- a/index2.html
+++ b/index2.html
@@ -6,10 +6,10 @@
             display: grid;
             grid-template-columns: 1fr 1fr;
             padding: 12px;
-
         }
         .header-right{
             justify-self: end;
+            align-self: start;
         }
         #header-left a{
             display: inline-block;
@@ -19,6 +19,9 @@
             text-decoration: none;
             font-family: Arial, Helvetica, sans-serif;
             font-size: 13px;
+        }
+        .header-left{
+            align-self: center;
         }
         #header-right a{
             display: inline-block;
@@ -31,6 +34,7 @@
         }
         .image{
             width: 23px;
+            transform: translateY(-25%);
         }
         #anmelden {
             display: inline-block;
@@ -57,7 +61,7 @@
             <div id="header-right">
                 <a href="https://mail.google.com/mail/?tab=wm&ogbl">Gmail</a>
                 <a href="https://www.google.de/imghp?hl=de&tab=wi&ogbl">Bilder</a>
-                <a href="https://www.google.de/intl/de/about/products?tab=wh"><img class="image" src="https://icon-library.com/images/google-menu-icon/google-menu-icon-9.jpg" alt="grid"></a>
+                <a id="grid" href="https://www.google.de/intl/de/about/products?tab=wh"><img class="image" align="middle" src="https://icon-library.com/images/google-menu-icon/google-menu-icon-9.jpg" alt="grid"></a>
                 <a href="https://accounts.google.com/ServiceLogin?hl=de&passive=true&continue=https://www.google.de/&ec=GAZAAQ" id="anmelden" style="color: white;">Anmelden</a>
  
             </div>
