--- a/index2.html
+++ b/index2.html
@@ -71,7 +71,6 @@
             margin-top: 23px;
         }
         #lupe{
-            display: block;
             color: #9aa0a6;
             fill:currentColor;
         }
@@ -104,7 +103,7 @@
         <img alt="Google" height="92" id="hplogo" src="https://www.google.de/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
         <div class="searchbar">
             <div id="lupe">
-                <svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="-15 -20 60 60"><path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path></svg>
+                <svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20"><path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path></svg>
             </div>
             <div>
                 <input type="test" title="Suche" id="search-input">
@@ -112,6 +111,6 @@
         </div>
     </div>
     <div class="footer">
-
+       
     </div>
 </body>
