--- a/index2.html
+++ b/index2.html
@@ -60,7 +60,7 @@
         }
         .searchbar{
             display: grid;
-            grid-template-columns: 1fr 8fr;
+            grid-template-columns: 1fr 10fr;
             align-content: center;
             place-items: center;
             border: 1px solid #dfe1e5;
@@ -78,6 +78,25 @@
             border: none;
             outline: none;
             width: 370px;
+        }
+        .button-search{
+            display: block;
+            text-align: -webkit-center;
+            text-align: center;
+            margin-left: auto;
+            margin-right: auto;
+            padding-top: 20px;
+        }
+        button{
+            height: 36px;
+            border: none;
+            outline: none;
+            margin: 11px 4px;
+            padding: 0 16px;
+            background-color: #f8f9fa;
+            font-family: arial,sans-serif;
+            font-size: 14px;
+            text-align: center;
         }
     </style>
 </head>
@@ -108,6 +127,12 @@
             <div>
                 <input type="test" title="Suche" id="search-input">
             </div>
+        </div>
+        <div>
+            <div class="button-search">
+                <button>Google Suche</button>
+                <button>Auf gut Glück!</button>
+            </div>    
         </div>
     </div>
     <div class="footer">
