--- a/index2.html
+++ b/index2.html
@@ -6,10 +6,15 @@
         body{
             font-size: small;
             font-family: arial,sans-serif;
+            display: grid;
+            grid-template-rows: 40px 1fr auto;
+            height: 100vh;
         }   
         .header{
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 1fr 2fr;
+            grid-template-areas:"header-left" 
+                                "header-right";
             padding: 12px;
         }
         .header-right{
@@ -18,7 +23,7 @@
         }
         #header-left a{
             display: inline-block;
-            padding-left: 15px;
+            padding-left: 7px;
             color: #000;
             opacity: 0.75;
             text-decoration: none;
@@ -30,7 +35,7 @@
         }
         #header-right a{
             display: inline-block;
-            padding-left: 15px;
+            padding-left: 7px;
             color: #000;
             opacity: 1;
             text-decoration: none;
@@ -45,7 +50,7 @@
             display: inline-block;
             line-height: 28px;
             padding: 0 12px;
-            margin-left: 17px;
+            margin-left: 7px;
             border-radius: 2px;
             border: 1px solid #4285f4;
             font-weight: bold;
@@ -98,6 +103,68 @@
             font-size: 14px;
             text-align: center;
         }
+        .footer{
+            display: grid;
+            grid-template-rows: 40px 40px 40px 40px;
+            grid-template-columns: 1fr;
+            grid-template-areas: 
+            "deu"
+            "co2"
+            "dat"
+            "wer";
+            width: 100%;
+            background-color:#f2f2f2;
+            border-top: 1px solid #dadce0;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 15px;
+            color: rgba(0,0,0,.54);
+        }
+        .d1{align-self: center; text-indent: 25px; grid-area: deu;}
+        .d2{justify-self: center; align-self: center; grid-area: co2;}
+        .d3{justify-self: center; align-self: center; grid-area: dat;}
+        .d4{justify-self: center; align-self: center; grid-area: wer;}
+        @media (min-width: 807px){
+            .footer{
+                display: grid;
+                grid-template-rows: 0px 40px 40px 40px;
+                grid-template-columns: 1fr 2fr;
+                grid-template-areas: 
+                ". ."
+                "deu deu"
+                "co2 dat"
+                "wer wer";
+            }
+            .d3{
+                text-indent: 25px;
+                direction: rtl;
+                justify-self:end;
+            }
+            .d4{
+                text-indent: 25px;
+                justify-self: start;
+            }
+        }
+        @media (min-width: 1210px){
+            .footer{
+                display: grid;
+                grid-template-rows: 0px 0px 40px 40px;
+                grid-template-columns: 2fr 1fr 2fr;
+                grid-template-areas: 
+                ". . ."
+                ". . ."
+                "deu deu deu"
+                "wer co2 dat";
+            }
+            .d3{
+                text-indent: 25px;
+                direction: rtl;
+                justify-self:end;
+            }
+            .d4{
+                text-indent: 25px;
+                justify-self: start;
+            }
+        }
     </style>
 </head>
 <body>
@@ -136,6 +203,17 @@
         </div>
     </div>
     <div class="footer">
-       
+        <div class="d1">
+            Deutschland
+        </div>
+        <div class="d2">
+            CO2-neutral seit 2007
+        </div>
+        <div class="d3">
+            Datenschutzerklärung   Nutzungsbedingungen   Einstellungen
+        </div>
+        <div class="d4">
+            Werbeprogramme   Unternehmen   Wie funktioniert die Google Suche? 
+        </div>
     </div>
 </body>
